tests/negative/no_main.sans
// expect-error: main
foo() I { 42 }
